--- a/project/src/main/res/values-en-rGB/strings.xml
+++ b/project/src/main/res/values-en-rGB/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">Drop off time</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">Daily %s</string>
+    <string name="cars_hourly_text">Hourly</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">Daily</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">Weekly</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">Monthly</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">Total %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">Slide to reserve</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">Checkout</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">Duplicate Trip</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">Session Timeout</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">Price Changed</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">Payment Failed</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">Invalid Info</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">Error</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Reserve</string>
     <!-- Text for viewing details-->
@@ -40,7 +58,7 @@
     <!-- Template for selected credit card-->
     <string name="selected_card_template">Expires %s</string>
     <!-- Template for car offer detail-->
-    <string name="car_offer_template">%s or similiar</string>
+    <string name="car_offer_template">%s or similar</string>
     <!-- Car doors text-->
     <string name="car_doors_text">Doors</string>
     <!-- Car bags text-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">Automatic Transmission</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">Manual Transmission</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">Log in with Expedia</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">By completing this booking I agree that I have read and accept the %1$s, the %2$s, and the %3$s.</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">Drop-off</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">Drop-off location must be the same as pick-up location</string>
+    <string name="drop_off_same_as_pick_up">Coming soon! We\&apos;re working hard to add one way bookings in an upcoming version.</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">Origin missing</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s or similar</string>
+    <string name="car_model_unknown_template">Exact model N/A</string>
 
     <string name="preparing_checkout_message">Preparing checkout…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">Desk &amp; vehicle at terminal</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">Total due today</string>
+    <string name="car_cost_breakdown_due_today">Due today</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">Total amount due at pick-up</string>
+    <string name="car_cost_breakdown_total_due">Due at pick-up</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">Done</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -125,7 +148,7 @@
     <!-- Unlimited mileage -->
     <string name="unlimited_mileage">Unlimited mileage</string>
     <!-- Checkout confirmation message (temporary) -->
-    <string name="successful_checkout_TEMPLATE">Itinerary # %1$s</string>
+    <string name="successful_checkout_TEMPLATE">Itinerary #%1$s</string>
     <!-- Error message for some missing checkout params -->
     <string name="error_missing_checkout_params">Missing checkout params.</string>
     <!--Adding hotel from Car Confirmation -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">Directions to %1$s</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">Call Customer Support</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">Please verify your pick-up date.</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">Please adjust your pick-up or drop-off times.</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">Please verify your drop-off date.</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">This date is too far out, please choose a closer date.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">This date is too far out, please choose a closer date.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">Please increase your reservation duration.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">Still there? Your session has expired. Please try your search again.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">Hmm. Looks like you already booked this trip. Please check your trips or email.</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">The price of your car has changed. Please confirm the new price to continue.</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">Names must not contain numbers or special characters.</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">Phone number length must be between 1 and 20.</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">Hmm…Your payment didn\&apos;t go through. Please double check your payment details and try again.</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">Payment failed.</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">View Price Change</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">My Trips</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">Edit Payment</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">Edit Info</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Enter your destination</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">Select Airport</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">Search For Things To Do</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Book Now %1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">Book Now %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">Slide to book</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">Checkout</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">Free cancellation</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">Contact details</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Enter contact details</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">Show More</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">Traveller details</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">Enter traveller details</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">Shop travel</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">Top deals tonight</string>
+    <string name="nearby_deals_title">Popular Hotels Tonight</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">See all</string>
+    <string name="nearby_deals_expand">See more</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% off</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">Loading…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">of 5 – guest rating</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">mobile only!</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">tonight only!</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">slide to book flight</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Your card will be charged %1$s</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">Amount due today: %1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">Amount to be paid now: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">The total for your trip, including &lt;b&gt;%1$s&lt;/b&gt; resort fee, will be &lt;b&gt;%2$s&lt;/b&gt;. You\&apos;ll pay the hotel the total cost of your booking (in the hotel\&apos;s local currency) during your stay.</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">The total for your trip, including &lt;b&gt;%1$s&lt;/b&gt; resort fee, will be &lt;b&gt;%2$s&lt;/b&gt;. You\&apos;ll pay the hotel the remaining cost of your booking (in the hotel\&apos;s local currency) during your stay.</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">Free cancellation within 24 hours</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">Finding Current Location…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">Searching for Hotels…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">Searching!</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">We\&apos;re working hard to find you the best hotel deals.</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">Searching hundreds of hotels for you!</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">Searching for the Hotel…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">Send email…</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
