--- a/project/src/main/res/values-de/strings.xml
+++ b/project/src/main/res/values-de/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">Rückgabezeit</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">%s pro Tag</string>
+    <string name="cars_hourly_text">pro Stunde</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">pro Tag</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">pro Woche</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">pro Monat</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">Gesamtpreis %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">Zum Reservieren wischen</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">Buchen</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">Doppelbuchung dieser Reise</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">Sitzung abgelaufen</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">Preisänderung</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">Bezahlung fehlgeschlagen</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">Angaben ungültig</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">Fehler</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Reservieren</string>
     <!-- Text for viewing details-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">Automatikgetriebe</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">Schaltgetriebe</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">Bei Expedia anmelden</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">Mit dem Durchführen dieser Buchung bestätige ich, dass ich die %1$s, die %2$s und die %3$s gelesen habe und anerkenne.</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">Rückgabe</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">Abhol- und Rückgabeort müssen identisch sein</string>
+    <string name="drop_off_same_as_pick_up">Bald ist es soweit! Wir arbeiten mit Hochdruck daran, Mietwagenbuchungen mit Rückgabe an einem anderen Standort in den kommenden Versionen aufzunehmen.</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">Abflughafen fehlt</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,6 +125,7 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s oder vergleichbar</string>
+    <string name="car_model_unknown_template">Keine Angabe zum genauen Fahrzeugmodell</string>
 
     <string name="preparing_checkout_message">Buchung wird vorbereitet…</string>
     <!-- Desk & vehicle at terminal -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">Wegbeschreibung für %1$s</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">Kundenservice</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">Bitte überprüfen Sie Ihr Abholdatum.</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">Bitte passen Sie Ihre Abhol- oder Rückgabedaten an.</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">Bitte überprüfen Sie Ihr Rückgabedatum.</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">Dieses Datum liegt zu weit in der Zukunft. Bitte wählen Sie ein früheres Datum.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">Dieses Datum liegt zu weit in der Zukunft. Bitte wählen Sie ein früheres Datum.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">Bitte wählen Sie einen längeren Buchungszeitraum.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">Sind Sie noch da? Ihre Sitzung ist abgelaufen. Bitte suchen Sie erneut.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">Es sieht so aus, als hätten Sie diese Reise schon einmal gebucht. Bitte überprüfen Sie Ihre Reisen oder E-Mails.</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">Ihr Mietwagenpreis hat sich geändert. Bitte bestätigen Sie den neuen Preis, bevor Sie fortfahren.</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">In Namen sind Zahlen oder Sonderzeichen nicht möglich.</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">Telefonnummern müssen zwischen 1 und 20 Stellen haben.</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">Leider konnte Ihre Zahlung nicht abgeschlossen werden. Überprüfen Sie bitte Ihre Zahlungsdetails und versuchen Sie es noch einmal.</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">Bezahlung fehlgeschlagen.</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">Preisänderung ansehen</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">Meine Reisen</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">Zahlungsdetails bearbeiten</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">Informationen bearbeiten</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Geben Sie Ihr Reiseziel ein</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">Flughafen auswählen</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">Aktivitäten suchen</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Jetzt buchen %1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">Jetzt buchen %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">Zum Buchen wischen</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">Buchen</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">Kostenlose Stornierung</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">Kontaktdaten</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Kontaktdaten eingeben</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">Für Ihre Suche gab es keine Ergebnisse. Bitte versuchen Sie es mit anderen Suchkriterien.</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">Mehr Angebote anzeigen</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">Angaben zum Reisenden</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">Angaben zum Reisenden eingeben</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">Reisen buchen</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">Top-Angebote für heute Abend</string>
+    <string name="nearby_deals_title">Beliebte Hotels für heute Abend</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">Alle anzeigen</string>
+    <string name="nearby_deals_expand">Mehr Hotelangebote ansehen</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% Rabatt</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">Laden…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">von 5 – Gästebewertung</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">Mobil-Angebot</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">Nur heute Abend</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">Streichen, um Flug zu buchen</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Ihre Kreditkarte wird mit %1$s belastet</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">Heute fälliger Betrag: %1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">Jetzt fällig: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">Der Gesamtpreis Ihrer Reise, inklusive einer Hotelgebühr von &lt;b&gt;%1$s&lt;/b&gt;, beträgt &lt;b&gt;%2$s&lt;/b&gt;. Sie bezahlen vor Ort im Hotel den Gesamtbetrag Ihrer Buchung (in der Landeswährung des Hotels).</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Der Gesamtpreis Ihrer Reise, inklusive einer Hotelgebühr von &lt;b&gt;%1$s&lt;/b&gt;, beträgt &lt;b&gt;%2$s&lt;/b&gt;. Sie bezahlen vor Ort im Hotel den Restbetrag Ihrer Buchung (in der Landeswährung des Hotels).</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">Kostenlose Stornierung innerhalb von 24 Stunden</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2114,6 +2193,12 @@
     <string name="progress_finding_location">Standortsuche…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">Suche nach Hotels läuft…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">Suche läuft…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">Wir suchen mit Hochdruck nach den besten Hotelangeboten für Sie.</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">Wir suchen für Sie Angebote in hunderten von Hotels.</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">Suche nach dem Hotel läuft…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3394,5 +3479,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">E-Mail senden</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
