--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">반납 시간</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">일별 %s</string>
+    <string name="cars_hourly_text">시간당</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">일별</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">주별</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">월별</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">총 합계 %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">밀어서 예약하기</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">결제</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">중복된 여행</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">세션 시간 초과</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">가격 변동됨</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">결제 실패함</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">잘못된 정보</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">오류</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">예약</string>
     <!-- Text for viewing details-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">자동 변속기</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">수동 변속기</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">익스피디아에 로그인</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">이 예약을 완료함으로써 본인은 %1$s, %2$s 및 %3$s을 읽었으며 이를 수락하는 데 동의합니다.</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">반납</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">반납 위치가 인수 위치와 같아야 합니다.</string>
+    <string name="drop_off_same_as_pick_up">제공 예정! 다음 버전에서는 타지점 반납의 편도 예약을 추가하도록 지금 열심히 준비 중입니다.</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">출발지가 없습니다.</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s 또는 동급 차량</string>
+    <string name="car_model_unknown_template">정확한 모델 없음</string>
 
     <string name="preparing_checkout_message">결제 준비 중…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">터미널 내 데스크 및 차량</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">오늘 결제할 총 금액</string>
+    <string name="car_cost_breakdown_due_today">오늘 결제할 금액</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">인수 시 결제할 총 금액</string>
+    <string name="car_cost_breakdown_total_due">인수 시 결제할 금액</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">완료</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">%1$s까지의 길 안내</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">고객 지원에 연락</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">인수 날짜를 확인해 주세요.</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">인수 또는 반납 시간을 조정해 주세요.</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">반납 날짜를 확인해 주세요.</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">이 날짜는 너무 멉니다. 좀 더 가까운 날짜를 선택해 주세요.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">이 날짜는 너무 멉니다. 좀 더 가까운 날짜를 선택해 주세요.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">예약 기간을 늘려주세요.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">아직 계시나요? 세션이 초과되었습니다. 다시 검색해 주세요.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">잠시만요, 이 여행은 이미 예약하신 것 같네요. 여행 일정 또는 이메일을 확인해 보세요.</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">고객님의 렌터카 가격이 변동되었습니다. 계속하려면 새 가격을 확인해 주세요.</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">이름에는 숫자나 특수 문자가 포함되면 안 됩니다.</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">전화번호는 1~20자 길이여야 합니다.</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">잠시만요… 결제가 제대로 되지 않았어요. 결제 세부 정보를 확인하고 다시 시도해 주세요.</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">결제하지 못했습니다.</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">가격 변동 보기</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">내 여행</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">결제 정보 수정</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">정보 수정</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">목적지 입력</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">공항 선택</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">즐길거리 검색</string>
     <!-- Search widget location hint -->
@@ -195,9 +257,9 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s, %2$s(%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">지금 예약 %1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">지금 예약! %1$s</string>
     <!-- Template for tickets type and count  summary -->
-    <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
+    <string name="ticket_summary_type_count_TEMPLATE">%2$s %1$s</string>
     <!-- LX Ticket type names -->
     <string name="ticket_type_traveler">여행객</string>
     <string name="ticket_type_adult">어른</string>
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">밀어서 예약하기</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">예약하기</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">무료 취소</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">연락처 정보</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">연락처 정보 입력</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">검색 결과가 없습니다. 다른 기준으로 다시 검색해 주세요.</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">더 보기</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">여행객 정보</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">여행객 정보 입력</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">여행 예약</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">오늘 밤 인기 특가 상품</string>
+    <string name="nearby_deals_title">오늘 밤 인기 호텔</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">모두 보기</string>
+    <string name="nearby_deals_expand">더 보기</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% 할인</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">로드 중…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">(5점 만점 – 고객 평점)</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">모바일 전용!</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">오늘 밤 한정!</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">밀어서 항공 예약하기</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">고객님의 신용카드로 %1$s의 금액이 청구됩니다.</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">오늘 결제할 금액: %1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">지금 결제할 금액: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt;의 리조트 요금을 포함하여 고객님 여행의 총 금액은 &lt;b&gt;%2$s&lt;/b&gt;입니다. 고객님은 숙박 시 호텔에 예약의 총 금액을 호텔의 현지 통화로 결제하시게 됩니다.</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt;의 리조트 요금을 포함하여 고객님 여행의 총 금액은 &lt;b&gt;%2$s&lt;/b&gt;입니다. 고객님은 숙박 시 호텔에 예약의 나머지 금액을 호텔의 현지 통화로 결제하시게 됩니다.</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">예약 후 24시간 이내 무료 취소</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">현재 위치 찾는 중…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">호텔 검색 중…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">찾는 중이에요!</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">고객님에게 딱 맞는 특가 호텔을 찾고 있어요.</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">수백 개 호텔 중에서 찾는 중이에요!</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">호텔 검색 중…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">이메일 전송하기…</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
