--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">Inlevertijd</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">%s / dag</string>
+    <string name="cars_hourly_text">/ uur</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">/ dag</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">/ week</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">/ maand</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">%s in totaal</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">Swipe om te reserveren</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">Betaling</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">Dubbele reis</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">Sessie verlopen</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">Prijs gewijzigd</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">Betaling mislukt</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">Ongeldige info</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">Fout</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Reserveren</string>
     <!-- Text for viewing details-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">Automaat</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">Handgeschakeld</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">Aanmelden bij Expedia</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">Door deze boeking te voltooien, bevestig ik de %1$s, de %2$s en het %3$s te hebben gelezen en goedgekeurd.</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">Inleveren</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">Inleverlocatie dient dezelfde te zijn als ophaallocatie</string>
+    <string name="drop_off_same_as_pick_up">Binnenkort! We zijn hard aan het werk om enkele vluchten toe te voegen aan een volgende versie.</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">Vertrekplaats ontbreekt</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s of soortgelijk</string>
+    <string name="car_model_unknown_template">Exact model n.v.t.</string>
 
     <string name="preparing_checkout_message">Boeking aan het samenstellen …</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">Balie &amp; voertuig bij terminal</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">Totaal nu te betalen</string>
+    <string name="car_cost_breakdown_due_today">Vandaag te betalen</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">Totaal te betalen bij het ophalen</string>
+    <string name="car_cost_breakdown_total_due">Te betalen bij ophalen</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">Gereed</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">Route naar %1$s</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">Bel de klantenservice</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">Controleer de ophaaldatum</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">Pas de ophaal- of inlevertijden aan</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">Controleer de inleverdatum.</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">Kies een datum die minder ver in de toekomst ligt.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">Kies een datum die minder ver in de toekomst ligt.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">Verleng de huurperiode voor deze reservering.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">Ben je er nog? Je sessie is verlopen. probeer opnieuw te zoeken.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">Wacht even. Het lijkt erop dat je deze reis al hebt geboekt. Controleer je reizen of je e-mailadres.</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">De prijs van je huurauto is gewijzigd. Bevestig a.u.b. de prijs voordat je doorgaat.</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">Namen mogen geen nummers of speciale tekens bevatten.</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">Het telefoonnummer dient tussen 1 en 20 tekens te bevatten.</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">Sorry, de betaling was niet succesvol. Controleer even je betalingsinfo en probeer opnieuw.</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">Betaling mislukt.</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">Prijswijziging weergeven</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">Mijn reizen</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">Betaling bewerken</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">Info bewerken</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Voer je bestemming in</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">Kies luchthaven</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">Activiteiten zoeken</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Boek nu %1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">Boek nu %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">Swipe om te boeken</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">Betaling</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">Gratis annulering</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">Contactinfo</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Contactinfo invoeren</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">Je zoekopdracht leverde geen resultaten op. Zoek opnieuw met andere zoekcriteria</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">Meer tonen</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">Reizigersinfo</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">Reizigersinfo invoeren</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">Plan &amp; Boek</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">Topdeals voor vandaag</string>
+    <string name="nearby_deals_title">Populaire hotels voor vandaag</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">Alle deals zien</string>
+    <string name="nearby_deals_expand">Meer tonen</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% korting</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">Laden …</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">/ 5 - gastenscore</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">alleen mobiel!</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">Alleen vandaag!</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">sleep om vlucht te boeken</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Op je creditcard wordt %1$s in rekening gebracht</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">Vandaag te betalen: %1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">Nu te betalen bedrag: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">Het totaal voor je reis, incl. &lt;b&gt;%1$s&lt;/b&gt; resortkosten, is &lt;b&gt;%2$s&lt;/b&gt;. Je betaalt pas tijdens je verblijf de totale boekingskosten aan het hotel (in de lokale valuta van het hotel).</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Het totaal voor je reis, incl. &lt;b&gt;%1$s&lt;/b&gt; resortkosten, is &lt;b&gt;%2$s&lt;/b&gt;. Je betaalt pas tijdens je verblijf de resterende boekingskosten aan het hotel (in de lokale valuta van het hotel).</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">Gratis annulering binnen 24 uur</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">Huidige locatie zoeken…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">Zoeken naar hotels…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">Aan het zoeken …</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">We proberen je de beste hoteldeals te vinden.</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">We zoeken nu door honderden hotels voor jou!</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">Op zoek naar hotel…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">E-mail sturen</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
