--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">Horário de devolução</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">%s por dia</string>
+    <string name="cars_hourly_text">por hora</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">por dia</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">por semana</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">por mês</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">Total de %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">Deslize para reservar</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">Reservar</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">Viagem duplicada</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">Tempo limite da sessão</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">O preço mudou</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">Falha no pagamento</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">Informações inválidas</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">Erro</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Reservar</string>
     <!-- Text for viewing details-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">Transmissão automática</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">Transmissão manual</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">Conectar com a Expedia</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">Ao finalizar esta reserva, eu concordo que li e aceitei as %1$s, os %2$s e a %3$s.</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">Devolução</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">O local de devolução deve ser o mesmo que o local de retirada</string>
+    <string name="drop_off_same_as_pick_up">Em breve! Estamos trabalhando para adicionar viagens só de ida em uma versão futura.</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">Faltam informações sobre a origem</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s ou semelhante</string>
+    <string name="car_model_unknown_template">Modelo exato n/a</string>
 
     <string name="preparing_checkout_message">Preparando a reserva…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">Balcão e veículo no terminal</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">Total devido hoje</string>
+    <string name="car_cost_breakdown_due_today">Devido hoje</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">Total devido no momento da retirada</string>
+    <string name="car_cost_breakdown_total_due">Devido no momento da retirada</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">Concluído</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -125,7 +148,7 @@
     <!-- Unlimited mileage -->
     <string name="unlimited_mileage">Quilometragem ilimitada</string>
     <!-- Checkout confirmation message (temporary) -->
-    <string name="successful_checkout_TEMPLATE">N° do itinerário: %1$s</string>
+    <string name="successful_checkout_TEMPLATE">N° do itinerário %1$s</string>
     <!-- Error message for some missing checkout params -->
     <string name="error_missing_checkout_params">Ausência dos parâmetros de check-out.</string>
     <!--Adding hotel from Car Confirmation -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">Indicações para %1$s</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">Ligar para o Atendimento ao Cliente</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">Verifique a data de retirada.</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">Ajuste seus horários de retirada e entrega.</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">Verifique a data de entrega.</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">Esta data está muito distante. Selecione uma data mais próxima.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">Esta data está muito distante. Selecione uma data mais próxima.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">Aumente a duração da reserva.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">Ainda está aí? Sua sessão expirou. Tente buscar novamente.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">Ops. Parece que você já reservou esta viagem. Verifique suas viagens ou e-mails.</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">O preço de seu carro mudou. Confirme o novo preço para prosseguir.</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">Os nomes não podem conter números nem caracteres especiais.</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">O número de telefone deve ter entre 1 e 20 dígitos.</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">Seu pagamento não foi processado. Verifique os detalhes do pagamento e tente novamente.</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">Falha no pagamento.</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">Ver alteração de preço</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">Minhas viagens</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">Editar pagamento</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">Editar info</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Insira seu destino</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">Selecionar aeroporto</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">Buscar Atividades</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Reserve!%1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">Reserve agora %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">Deslize para reservar</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">Reservar</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">Cancelamento grátis</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">Informações de contato</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Insira as informações de contato</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">Sua busca não obteve resultados. Tente novamente usando outros critérios de busca.</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">Mostrar mais</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">Detalhes do viajante</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">Insira os detalhes do viajante</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">Compre suas viagens</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">Principais ofertas desta noite</string>
+    <string name="nearby_deals_title">Hotéis populares esta noite</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">Ver todas</string>
+    <string name="nearby_deals_expand">Ver mais</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% off</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">Carregando…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">de 5 (classificação do hóspede)</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">somente para dispositivos móveis!</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">somente hoje!</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">deslize para reservar voo</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">%1$s será debitado em seu cartão.</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">Valor devido hoje: %1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">Valor atual a ser pago: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">O total para sua viagem, incluindo a taxa de resort de &lt;b&gt;%1$s&lt;/b&gt;, é de &lt;b&gt;%2$s&lt;/b&gt;. Você pagará ao hotel o custo total da reserva (na moeda local do hotel) durante sua estadia.</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">O total para sua viagem, incluindo a taxa de resort de &lt;b&gt;%1$s&lt;/b&gt;, é de &lt;b&gt;%2$s&lt;/b&gt;. Você pagará ao hotel o valor restante da reserva (na moeda local do hotel) durante sua estadia.</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">Cancelamento grátis dentro de 24 horas</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">Procurando posição atual…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">Pesquisando hotéis…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">Buscando!</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">Estamos trabalhando pra encontrar as melhores ofertas de hotéis.</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">Buscando centenas de hotéis pra você!</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">Pesquisando hotel…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">Enviar e-mail…</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
