--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">Tid för avlämning</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">%s per dag</string>
+    <string name="cars_hourly_text">per timme</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">per dag</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">per vecka</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">per månad</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">Totalt %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">Dra för att boka</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">Betalning</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">Dubbelbokad resa</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">Sessionen har gått ut</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">Priset har ändrats</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">Betalningen misslyckades</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">Ogiltig info</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">Det uppstod ett fel</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Boka</string>
     <!-- Text for viewing details-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">Automatisk växellåda</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">Manuell växellåda</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">Logga in med Expedia</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">Genom att slutföra bokningen bekräftar jag att jag har läst och godkänt %1$s, %2$s och %3$s.</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">Avlämning</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">Plats för avlämning måste vara densamma som vid hämtning</string>
+    <string name="drop_off_same_as_pick_up">Kommer snart! Vi jobbar på att lägga till enkelresor i vår kommande version.</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">Avreseort saknas</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s eller liknande</string>
+    <string name="car_model_unknown_template">Exakt biltyp inte tillgänglig</string>
 
     <string name="preparing_checkout_message">Förbereder betalning…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">Disk och fordon i terminalen</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">Totalt att betala idag</string>
+    <string name="car_cost_breakdown_due_today">Att betala idag</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">Totalt att betala vid hämtning</string>
+    <string name="car_cost_breakdown_total_due">Att betala vid hämtning</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">Klar</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">Vägbeskrivning till %1$s</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">Ring kundtjänst</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">Bekräfta ditt hämtningsdatum.</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">Ändra dina tider för hämtning eller avlämning.</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">Bekräfta ditt avlämningsdatum.</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">Datumet är för sent, välj ett tidigare datum.</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">Datumet är för sent, välj ett tidigare datum.</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">Förläng bokningen.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">Är du kvar? Sessionen har gått ut. Försök med din sökning igen.</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">Hmm. Det verkar som om du redan har bokat den här resan. Kontrollera dina resor eller din e-post.</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">Priset för din bil har ändrats. Bekräfta det nya priset för att fortsätta.</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">Namn får inte innehålla siffror eller specialtecken.</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">Telefonnummer måste bestå av 1-20 siffror.</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">Hmm…Din betalning gick inte igenom. Kontrollera dina betalningsuppgifter och försök igen.</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">Betalningen misslyckades.</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">Se prisändring</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">Mina resor</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">Redigera betalning</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">Ändra uppgifter</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Ange din destination</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">Välj flygplats</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">Sök efter saker att göra</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Boka nu %1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">Boka nu %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">Dra för att boka</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">Betalning</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">Gratis avbokning</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">Kontaktuppgifter</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Ange kontaktuppgifter</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">Din sökning gav inga resultat. Prova att söka igen med andra kriterier.</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">Se mer</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">Resenärsinformation</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">Ange resenärens uppgifter</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">Boka resor</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">Topperbjudanden ikväll</string>
+    <string name="nearby_deals_title">Populära hotell ikväll</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">Se alla</string>
+    <string name="nearby_deals_expand">Se mer</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% rabatt</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">Hämtar…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">av 5 – gästbetyg</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">endast mobil!</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">endast ikväll!</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">dra för att boka flyg</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Ditt kort kommer att debiteras %1$s</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">Belopp att betala idag: %1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">Belopp att betala nu: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">Totalbeloppet för din resa, inklusive resortavgiften på &lt;b&gt;%1$s&lt;/b&gt;, blir &lt;b&gt;%2$s&lt;/b&gt;. Du betalar hotellet den totala kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Totalbeloppet för din resa, inklusive resortavgiften på &lt;b&gt;%1$s&lt;/b&gt;, blir &lt;b&gt;%2$s&lt;/b&gt;. Du betalar hotellet den resterande kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">Gratis avbokning inom 24 timmar</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">Söker nuvarande plats…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">Söker hotell…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">Söker…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">Vi letar upp de bästa hotellerbjudandena åt dig.</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">Söker bland hundratals hotell åt dig…</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">Söker efter hotellet…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">Skicka e-post…</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
