--- a/project/src/main/res/values-zh-rHK/strings.xml
+++ b/project/src/main/res/values-zh-rHK/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">還車時間</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">每日 %s</string>
+    <string name="cars_hourly_text">每小時</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">每日</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">每週</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">每月</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">合共 %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">滑動以預訂</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">付款</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">重複的旅行</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">逾時退出</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">價格變更</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">付款失敗</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">資料無效</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">錯誤</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">預訂</string>
     <!-- Text for viewing details-->
@@ -40,7 +58,7 @@
     <!-- Template for selected credit card-->
     <string name="selected_card_template">到期日 %s</string>
     <!-- Template for car offer detail-->
-    <string name="car_offer_template">%s或類似車款</string>
+    <string name="car_offer_template">%s 或類似車款</string>
     <!-- Car doors text-->
     <string name="car_doors_text">門</string>
     <!-- Car bags text-->
@@ -49,12 +67,16 @@
     <string name="car_auto_tran_text">自動變速</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">手動變速</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">以 Expedia 帳戶登入</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">完成此預訂，即表示本人同意已閱讀並接受%1$s、%2$s及%3$s。</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">還車</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">還車地點必須與取車地點相同</string>
+    <string name="drop_off_same_as_pick_up">即將推出！我們正加緊努力，以於新版本中加入單程航班預訂。</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">未輸入出發地</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s 或類似車款</string>
+    <string name="car_model_unknown_template">無確切車型</string>
 
     <string name="preparing_checkout_message">正在準備付款…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">客運大樓櫃台和車輛</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">現在應付總額</string>
+    <string name="car_cost_breakdown_due_today">今天支付</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">取車時應付總額</string>
+    <string name="car_cost_breakdown_total_due">取車時支付</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">完成</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">前往 %1$s 的路線</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">致電客戶支援</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">請確認取車日期。</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">請修改取車或還車時間。</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">請確認還車日期。</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">此日期太久遠，請選擇一個更近的日期。</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">此日期太久遠，請選擇一個更近的日期。</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">請增加預訂時限。</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">您還在嗎？您已逾時登出。請重新搜尋。</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">但是，您似乎已預訂此行程。請查看您的行程或電郵。</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">您的車輛價格已變更。請確認新的價格以繼續。</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">姓名不可含有數字或特殊字元。</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">電話號碼長度必須在 1 - 20 之間。</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">但是，您尚未成功付款。請再次檢查您的付款資料並重試。</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">付款失敗。</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">檢視價格變動</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">我的行程</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">編輯付款資料</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">修改資料</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">請輸入目的地</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">選擇機場</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">搜尋活動</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">立即預訂%1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">立即預訂%1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">滑動以預訂</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">付款</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">免費取消</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">聯絡資料</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">輸入聯絡資料</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">搜尋沒有結果。請以其他條件再次搜尋。</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">顯示更多</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">旅客資料</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">輸入旅客資料</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">搜尋行程</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">今晚特惠</string>
+    <string name="nearby_deals_title">今晚熱門酒店</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">查看全部</string>
+    <string name="nearby_deals_expand">查看更多</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% 折扣</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">載入中…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">(共 5 分) - 旅客評級</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">僅限流動裝置預訂！</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">只限今晚！</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">滑動來預訂機票</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">我們將透過您的信用卡收取 %1$s</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">今天須付金額：%1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">現須付金額：%1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">您行程的總金額 (包括 &lt;b&gt;%1$s&lt;/b&gt; 休閒設施費) 將為 &lt;b&gt;%2$s&lt;/b&gt;。您需於住宿期間 (以酒店當地貨幣) 向酒店支付預訂總金額。</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">您行程的總金額 (包括 &lt;b&gt;%1$s&lt;/b&gt; 休閒設施費) 將為 &lt;b&gt;%2$s&lt;/b&gt;。您需於住宿期間 (以酒店當地貨幣) 向酒店支付預訂的餘額。</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">24 小時內免費取消</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">正在尋找您目前的所在地點…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">正在搜尋酒店…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">搜尋中！</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">正加緊努力為您尋找至抵酒店優惠。</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">正為您搜尋數百間酒店！</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">正在搜尋此酒店…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">發送電郵…</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
