--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -12,7 +12,13 @@
     <!-- SeekBar tooltip description for drop off time-->
     <string name="cars_time_slider_drop_off_label">还车时间</string>
     <!-- Cars price templates-->
-    <string name="cars_daily_template">每天 %s</string>
+    <string name="cars_hourly_text">每小时</string>
+    <!-- Cars price templates-->
+    <string name="cars_daily_text">每天</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_weekly_text">每周</string>
+    <!-- Cars weekly price templates-->
+    <string name="cars_monthly_text">每月</string>
     <!-- Cars price templates-->
     <string name="cars_total_template">总额 %s</string>
     <!-- Text for cars promo codes-->
@@ -23,6 +29,18 @@
     <string name="cars_slider_text">滑动屏幕，开始预订</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">付款</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_dupe_trip_text">重复行程</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_session_timeout_text">会话超时</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_price_change_text">价格变更</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_payment_failed_text">付款失败</string>
+    <!-- Text for error toolbar-->
+    <string name="cars_invalid_input_text">信息无效</string>
+    <!-- Text for generic error toolbar-->
+    <string name="cars_error_text">错误</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">预订</string>
     <!-- Text for viewing details-->
@@ -40,21 +58,25 @@
     <!-- Template for selected credit card-->
     <string name="selected_card_template">到期日期为 %s</string>
     <!-- Template for car offer detail-->
-    <string name="car_offer_template">%s或相近车型</string>
+    <string name="car_offer_template">%s 或相近车型</string>
     <!-- Car doors text-->
     <string name="car_doors_text">门</string>
     <!-- Car bags text-->
-    <string name="car_bags_text">袋子</string>
+    <string name="car_bags_text">个旅行袋</string>
     <!-- Car automatic transmission text-->
     <string name="car_auto_tran_text">自动挡</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">手动挡</string>
+    <!-- Log in Text-->
+    <string name="cars_login_text">使用 Expedia 帐户登录</string>
 
     <!-- car result -->
     <!-- car door range -->
     <string name="car_door_range_TEMPLATE">%1$d-%2$d</string>
     <!-- car details template -->
     <string name="car_details_TEMPLATE">%1$s %2$s</string>
+    <!-- car checkout legal text ex: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="car_legal_TEMPLATE">完成此次预订即表示，您已经阅读并接受%1$s、%2$s和%3$s。</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
@@ -89,7 +111,7 @@
     <!-- Label for drop-up time picker -->
     <string name="drop_off_time_label">还车</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
-    <string name="drop_off_same_as_pick_up">还车地点必须与取车地点相同</string>
+    <string name="drop_off_same_as_pick_up">即将推出！我们正在努力，争取尽快添加单程预订功能。</string>
     <!-- Error messge for missing Origin in search form -->
     <string name="error_missing_origin_param">缺少出发地信息</string>
     <!-- Error messge for missing Start date in search form -->
@@ -103,14 +125,15 @@
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s 或相近车型</string>
+    <string name="car_model_unknown_template">具体型号未知</string>
 
     <string name="preparing_checkout_message">准备付款…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">航站楼有服务台和车辆</string>
     <!-- Car checkout cost breakdown total due today -->
-    <string name="car_cost_breakdown_due_today">今天应付总额</string>
+    <string name="car_cost_breakdown_due_today">今天付款</string>
     <!-- Car checkout cost breakdown total due at pick up -->
-    <string name="car_cost_breakdown_total_due">取车时应付总额</string>
+    <string name="car_cost_breakdown_total_due">取车时付款</string>
     <!-- Car checkout cost breakdown for alert button -->
     <string name="car_cost_breakdown_button_text">完成</string>
     <!-- Car checkout rental fare breakdown types -->
@@ -142,7 +165,44 @@
     <string name="car_confirmation_directions">前往%1$s的路线</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">致电客服</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <!-- Message for user that to verify pick-up date."  -->
+    <string name="pick_up_date_error">请检查您的取车日期。</string>
+    <!-- Message for user that pick-up time is too early."  -->
+    <string name="pick_up_time_error">请调整您的取车或还车时间。</string>
+    <!-- Message for user that to verify drop-off date."  -->
+    <string name="drop_off_date_error">请检查您的还车日期。</string>
+    <!-- Message for user  to choose a closer date.""  -->
+    <string name="drop_off_too_far_error">日期距离太远了，请选择一个较近的日期。</string>
+    <!-- Message for user that date is too far out."  -->
+    <string name="date_out_of_range">日期距离太远了，请选择一个较近的日期。</string>
+    <!-- Message for user that increase your reservation duration. -->
+    <string name="reservation_time_too_short">请延长预订时间。</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_time_out">还在吗？您的会话已经过期了。请再次尝试搜索。</string>
+    <!-- Shown to user when they try to book something already booked -->
+    <string name="reservation_already_exists">嗯…好像您已经预订过了。请检查您的行程或电子邮件。</string>
+    <!-- Show to user when the price of a car they are trying to book has changed -->
+    <string name="reservation_price_change">您租车的价格有变化。请确认新价格，然后继续。</string>
+    <!-- Show to user when the their traveler information is invalid -->
+    <string name="reservation_invalid_name">姓名不能包含数字或特殊字符。</string>
+    <!-- Show to user when their phone number is invalid -->
+    <string name="reservation_invalid_phone">电话号码长度必须在 1 至 20 位数之间。</string>
+
+    <!-- Shown to a user when there is an issue with their credit card -->
+    <string name="reservation_payment_failed">嗯…您的付款没有成功。请仔细检查付款信息，然后再试一次。</string>
+    <!-- Payment failed button text that takes you back to checkout -->
+    <string name="payment_failed">付款失败。</string>
+    <!-- Price changed button text that takes you back to checkout -->
+    <string name="view_price_change">查看价格变化</string>
+    <!-- My Trips button that takes you to Itins -->
+    <string name="my_trips">我的旅行</string>
+    <!-- Button text that takes you back to the payment widget to edit your payment -->
+    <string name="edit_payment">编辑付款信息</string>
+    <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
+    <string name="edit_info">编辑信息</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">输入您的目的地</string>
@@ -174,6 +234,8 @@
     <string name="missing_flight_info_button_prompt">选择机场</string>
 
     <!-- LX -->
+    <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
+    <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
     <string name="search_widget_heading">搜索活动</string>
     <!-- Search widget location hint -->
@@ -195,7 +257,7 @@
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%2$s (%3$s) %1$s</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">立即预订 %1$s%2$s</string>
+    <string name="offer_book_now_TEMPLATE">立即预订 %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- LX Ticket type names -->
@@ -298,8 +360,6 @@
     <string name="lx_slider_text">滑动屏幕，开始预订</string>
     <!-- Text for checkout toolbar-->
     <string name="lx_checkout_text">付款</string>
-    <!-- Total Price with currency -->
-    <string name="lx_total_price_with_currency_TEMPLATE">%1$s%2$s</string>
     <!-- Free cancellation -->
     <string name="lx_free_cancellation">免费取消</string>
     <!-- Total with tax -->
@@ -308,6 +368,13 @@
     <string name="lx_contact_details">联系信息</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">请输入详细联系信息</string>
+    <!-- LX search error -->
+    <string name="error_lx_search_message">您所做的搜索未返回任何结果。请选择其他条件，再搜索一次。</string> 	<!-- Offers show more string -->
+    <string name="lx_show_more_offers">显示更多选择</string>
+    <!-- Text for traveler details toolbar-->
+    <string name="lx_traveler_details_text">旅客详细信息</string>
+    <!-- Text for enter traveler details-->
+    <string name="lx_traveler_enter_details_text">输入旅客信息</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -605,11 +672,19 @@
     <!-- Shop travel label -->
     <string name="shop_travel">旅游预订</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">今晚最热促销</string>
+    <string name="nearby_deals_title">今晚热卖酒店</string>
     <!-- See all nearby deals -->
-    <string name="nearby_deals_expand">查看全部</string>
+    <string name="nearby_deals_expand">查看更多选择</string>
     <!-- Percent off template, e.g. 50% off -->
-    <string name="percent_off_TEMPLATE">%2.0f%% 折扣</string>
+    <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">正在加载…</string>
+    <!-- Hotel list rating text -->
+    <string name="hotel_rating_text">/5 - 住客评分</string>
+    <!-- Expedia Deal for a given property, Mobile exclusive -->
+    <string name="launch_mobile_exclusive">仅限手机端！</string>
+    <!-- Expedia Deal for a given property, tonight only -->
+    <string name="launch_tonight_only">只限今晚！</string>
 
 
     <!-- Launch screen -->
@@ -1481,6 +1556,8 @@
     <string name="slide_to_book_flight">滑动屏幕可预订机票</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">您的卡将被收取 %1$s</string>
+    <!-- Cars amount due today without a required credit card -->
+    <string name="amount_due_today_TEMPLATE">今天应付金额：%1$s</string>
     <!-- Amount to be paid now -->
     <string name="Amount_to_be_paid_now_TEMPLATE">现在应付金额：%1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
@@ -1533,6 +1610,8 @@
     <string name="pay_later_resort_disclaimer_TEMPLATE">您的旅行费用总计 &lt;b&gt;%1$s&lt;/b&gt;，包含度假费 &lt;b&gt;%2$s&lt;/b&gt;。您将在住宿期间以酒店当地货币支付您的预订总额。</string>
     <!-- Pay later disclaimer with deposit and resort fees -->
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">您的旅行费用总计 &lt;b&gt;%1$s&lt;/b&gt;，包含度假费 &lt;b&gt;%2$s&lt;/b&gt;。您将在住宿期间以酒店当地货币支付您的预订余额。</string>
+    <!-- Flights AB Test Free Cancellation-->
+    <string name="ab_test_flights_free_cancellation">24 小时内免费取消</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2113,6 +2192,12 @@
     <string name="progress_finding_location">正在查找当前位置…</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels">正在搜索酒店…</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_message">正在搜索！</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_working_hard">我们正在努力为您寻找最好的特价酒店。</string>
+    <!-- Message displayed when app is searching a location for hotels -->
+    <string name="progress_searching_hotels_hundreds">正在为您搜索数千家酒店！</string>
     <!-- Message displayed when app is searching for a particular hotel -->
     <string name="progress_searching_selected_hotel">正在搜索指定的酒店…</string>
     <!-- Message displayed when search comes up with zero results -->
@@ -3393,5 +3478,8 @@
 
     <!-- Mail intent chooser dialog title -->
     <string name="mailto_title">发送电子邮件…</string>
+
+    <!-- Template for generating textview clicks -->
+    <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
 
 </resources>
